src/objects/Apttus__IDEJobClauseExtraction__c.object
<CustomObject>
    <description>Holds one or more clause related information received from the IDE Provider (e.g. KIRA)</description>
    <fields>
        <fullName>Apttus__ClauseHeader__c</fullName>
        <description>The clause header text</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The clause header text</inlineHelpText>
        <label>Clause Header</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ClauseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated clause</description>
        <inlineHelpText>ID of the associated clause</inlineHelpText>
        <label>Clause</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>IDE Job Clause Extractions</relationshipLabel>
        <relationshipName>IDEJobClauseExtractions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ExtractedValue__c</fullName>
        <description>Extracted value for the field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Extracted value for the field</inlineHelpText>
        <label>Extracted Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__FieldNumber__c</fullName>
        <description>The IDE field number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The IDE field number</inlineHelpText>
        <label>Field Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__IDEJobId__c</fullName>
        <description>ID of the associated job</description>
        <inlineHelpText>ID of the associated job</inlineHelpText>
        <label>IDE Job</label>
        <referenceTo>Apttus__IDEJob__c</referenceTo>
        <relationshipLabel>IDE Job Clause Extractions</relationshipLabel>
        <relationshipName>IDEJobClauseExtractions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__LengthDifference__c</fullName>
        <description>The length difference for use by the refactoring algorithm</description>
        <inlineHelpText>The length difference for use by the refactoring algorithm</inlineHelpText>
        <label>Length Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__PageNumber__c</fullName>
        <description>The page number of the analyzed document</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The page number of the analyzed document</inlineHelpText>
        <label>Page Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PatternSimilarity__c</fullName>
        <description>The pattern similarity for use by the refactoring algorithm</description>
        <inlineHelpText>The pattern similarity for use by the refactoring algorithm</inlineHelpText>
        <label>Pattern Similarity</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__RefinedValue__c</fullName>
        <description>The refined value of the extracted data</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The refined value of the extracted data</inlineHelpText>
        <label>Refined Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__TextSimilarity__c</fullName>
        <description>The text similarity for use by the refactoring algorithm</description>
        <inlineHelpText>The text similarity for use by the refactoring algorithm</inlineHelpText>
        <label>Text Similarity</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__WordWildCardValue__c</fullName>
        <description>The word wild card value of the extracted data</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The word wild card value of the extracted data</inlineHelpText>
        <label>Word Wild Card Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>IDE Job Clause Extraction</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Job Clause Extractions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>